# ITEA

./: README.md
alligator/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alligator/alligator/api/: __init__.py
alligator/alligator/api/auth/: contract.py  endpoints.py
alligator/alligator/api/event/: contract.py  endpoints.py
alligator/alligator/api/user/: contract.py  endpoints.py
alligator/alligator/core/: anketa_dict.py  event_crud.py  repository.py  user_crud.py
alligator/alligator/models/: recommendation.py  settings.py  token.py  user.py
alligator/alligator/service/: anketa.py
alligator/alligator/service/db/mongo/: database.py
alligator/alligator/service/recs/: n_dim_operations.py  rec.py
alligator/tests/: test_alligator.py
event-loader/: Dockerfile  README.md  pyproject.toml  setup.cfg
event-loader/event_loader/: classification.py  database.py  duplicate_filter.py  init_classification.py  model.py  scheduler.py
event-loader/event_loader/config/: .env
event-loader/event_loader/crawlers/: ict2go.py  it_events.py  it_world.py
event-loader/event_loader/ds_models/: stop_words_ru.py
event-loader/tests/: test_duplicate_filter.py  test_event_loader.py
frontend/: .dockerignore  Dockerfile  README.md  README.old.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/API/: AnketaService.ts  AuthService.ts  EventsService.tsx  UserService.ts
frontend/src/components/AllPageComponents/: ErrAlert.tsx  Footer.tsx  Header.tsx  Layout.tsx  Loader.tsx  SupportAlert.tsx
frontend/src/components/AllPageComponents/AuthModal/: AuthModal.tsx  styles.tsx  validation.tsx
frontend/src/components/MainPageComponents/: ButtonBlock.tsx  EventNavigation.tsx  EventsList.tsx  MyPagination.tsx  SearchInput.tsx  Welcome.tsx
frontend/src/hoc/: ModalProvider.tsx
frontend/src/hooks/: useModal.tsx
frontend/src/http/: index.ts  user_api.ts
frontend/src/interfaces/: AnketaCardInterface.ts  anketaPriorityInterface.ts  myEventInterface.ts  userInterface.ts  visitedEventInterface.ts
frontend/src/pages/: EventPage.tsx  MainPage.tsx
frontend/src/pages/Anketa/: Anketa.tsx  AnketaCard.tsx
frontend/src/pages/SignUp/: AnketaModal.tsx  SignUp.tsx  styles.tsx  validation.tsx
frontend/src/store/: store.ts
frontend/src/styles/: App.css  MainIcon.tsx
(+2 files in other folders)
